--- a/tutorials/SVM character recognition.ipynb
+++ b/tutorials/SVM character recognition.ipynb
@@ -2,29 +2,179 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 90,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# https://pythonprogramming.net/support-vector-machine-svm-example-tutorial-scikit-learn-python/?completed=/machine-learning-python-sklearn-intro/\n",
+    "# "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
     "from sklearn import datasets\n",
     "from sklearn import svm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data:\n",
+      "(1797, 64)\n",
+      "[[  0.   0.   5. ...,   0.   0.   0.]\n",
+      " [  0.   0.   0. ...,  10.   0.   0.]\n",
+      " [  0.   0.   0. ...,  16.   9.   0.]\n",
+      " ..., \n",
+      " [  0.   0.   1. ...,   6.   0.   0.]\n",
+      " [  0.   0.   2. ...,  12.   0.   0.]\n",
+      " [  0.   0.  10. ...,  12.   1.   0.]]\n",
+      "///////////////\n",
+      "Images:\n",
+      "(1797, 8, 8)\n",
+      "[[[  0.   0.   5. ...,   1.   0.   0.]\n",
+      "  [  0.   0.  13. ...,  15.   5.   0.]\n",
+      "  [  0.   3.  15. ...,  11.   8.   0.]\n",
+      "  ..., \n",
+      "  [  0.   4.  11. ...,  12.   7.   0.]\n",
+      "  [  0.   2.  14. ...,  12.   0.   0.]\n",
+      "  [  0.   0.   6. ...,   0.   0.   0.]]\n",
+      "\n",
+      " [[  0.   0.   0. ...,   5.   0.   0.]\n",
+      "  [  0.   0.   0. ...,   9.   0.   0.]\n",
+      "  [  0.   0.   3. ...,   6.   0.   0.]\n",
+      "  ..., \n",
+      "  [  0.   0.   1. ...,   6.   0.   0.]\n",
+      "  [  0.   0.   1. ...,   6.   0.   0.]\n",
+      "  [  0.   0.   0. ...,  10.   0.   0.]]\n",
+      "\n",
+      " [[  0.   0.   0. ...,  12.   0.   0.]\n",
+      "  [  0.   0.   3. ...,  14.   0.   0.]\n",
+      "  [  0.   0.   8. ...,  16.   0.   0.]\n",
+      "  ..., \n",
+      "  [  0.   9.  16. ...,   0.   0.   0.]\n",
+      "  [  0.   3.  13. ...,  11.   5.   0.]\n",
+      "  [  0.   0.   0. ...,  16.   9.   0.]]\n",
+      "\n",
+      " ..., \n",
+      " [[  0.   0.   1. ...,   1.   0.   0.]\n",
+      "  [  0.   0.  13. ...,   2.   1.   0.]\n",
+      "  [  0.   0.  16. ...,  16.   5.   0.]\n",
+      "  ..., \n",
+      "  [  0.   0.  16. ...,  15.   0.   0.]\n",
+      "  [  0.   0.  15. ...,  16.   0.   0.]\n",
+      "  [  0.   0.   2. ...,   6.   0.   0.]]\n",
+      "\n",
+      " [[  0.   0.   2. ...,   0.   0.   0.]\n",
+      "  [  0.   0.  14. ...,  15.   1.   0.]\n",
+      "  [  0.   4.  16. ...,  16.   7.   0.]\n",
+      "  ..., \n",
+      "  [  0.   0.   0. ...,  16.   2.   0.]\n",
+      "  [  0.   0.   4. ...,  16.   2.   0.]\n",
+      "  [  0.   0.   5. ...,  12.   0.   0.]]\n",
+      "\n",
+      " [[  0.   0.  10. ...,   1.   0.   0.]\n",
+      "  [  0.   2.  16. ...,   1.   0.   0.]\n",
+      "  [  0.   0.  15. ...,  15.   0.   0.]\n",
+      "  ..., \n",
+      "  [  0.   4.  16. ...,  16.   6.   0.]\n",
+      "  [  0.   8.  16. ...,  16.   8.   0.]\n",
+      "  [  0.   1.   8. ...,  12.   1.   0.]]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x112a55750>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP4AAAECCAYAAADesWqHAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAC4dJREFUeJzt3d+LXPUdxvHn6SZRq2FXqhVxxVioARG6GyRUFN0mRGKV\n5KYXCShUWtKLVgwtiPam8R8Qe1GEEDWCMaLRaJHWGjCLCK02iWuN2Vg0REz8sYqJUS8S1E8v5kS2\nIe2eDfv97sx+3i8YMrs7meezCc+cc2bOzNcRIQC5fGe2BwBQH8UHEqL4QEIUH0iI4gMJUXwgoa4o\nvu2Vtt+y/bbtuwtnPWR7wvbekjmT8i61vdP2Pttv2r6zcN7Ztl+1/XqTd2/JvCazz/Zrtp8rndXk\nHbT9hu0x27sKZw3Y3mZ7v+1x29cUzFrc/E4nL8dsry8SFhGzepHUJ+kdST+QtEDS65KuLJh3vaQl\nkvZW+v0ulrSkub5Q0r8L/36WdF5zfb6kVyT9uPDv+FtJj0l6rtK/6UFJF1TKekTSL5vrCyQNVMrt\nk/ShpMtK3H83bPGXSno7Ig5ExAlJj0taXSosIl6S9Gmp+z9N3gcRsae5/rmkcUmXFMyLiPii+XJ+\ncyl2lpbtQUk3S9pUKmO22O5XZ0PxoCRFxImIOFopfrmkdyLi3RJ33g3Fv0TSe5O+PqSCxZhNthdJ\nGlZnK1wyp8/2mKQJSTsiomTe/ZLukvRNwYxThaQXbO+2va5gzuWSPpb0cHMos8n2uQXzJlsjaWup\nO++G4qdg+zxJT0laHxHHSmZFxNcRMSRpUNJS21eVyLF9i6SJiNhd4v7/j+siYomkmyT92vb1hXLm\nqXNY+EBEDEv6UlLR56AkyfYCSaskPVkqoxuKf1jSpZO+Hmy+N2fYnq9O6bdExNO1cpvd0p2SVhaK\nuFbSKtsH1TlEW2b70UJZ34qIw82fE5K2q3O4WMIhSYcm7TFtU+eBoLSbJO2JiI9KBXRD8f8p6Ye2\nL28e6dZI+vMszzRjbFudY8TxiLivQt6Ftgea6+dIWiFpf4msiLgnIgYjYpE6/28vRsStJbJOsn2u\n7YUnr0u6UVKRV2gi4kNJ79le3HxruaR9JbJOsVYFd/Olzq7MrIqIr2z/RtLf1Hkm86GIeLNUnu2t\nkkYkXWD7kKQ/RMSDpfLU2SreJumN5rhbkn4fEX8plHexpEds96nzwP5ERFR5ma2SiyRt7zyeap6k\nxyLi+YJ5d0ja0myUDki6vWDWyQezFZJ+VTSneekAQCLdsKsPoDKKDyRE8YGEKD6QEMUHEuqq4hc+\n/XLWssgjr9vyuqr4kmr+41b9jySPvG7K67biA6igyAk8tjkraAZdccUV0/47n332mfr7+88ob968\n6Z/QeeTIEZ1//vlnlPf+++9P++8cP35cZ5111hnlHT1a6521syMiPNVtKH4PGB0drZo3MDBQNW/D\nhg1V85555pmqebW1KT67+kBCFB9IiOIDCVF8ICGKDyRE8YGEKD6QEMUHEmpV/JpLXAEob8riNx/a\n+Cd1PvL3SklrbV9ZejAA5bTZ4ldd4gpAeW2Kn2aJKyCLGftc/eaDA2q/ZxnAGWhT/FZLXEXERkkb\nJd6dB3S7Nrv6c3qJKyCjKbf4tZe4AlBeq2P8Zp23Umu9AaiMM/eAhCg+kBDFBxKi+EBCFB9IiOID\nCVF8ICGKDyQ0Y2/SQTm1l3y64YYbquaNjIxUzZvrK+m0wRYfSIjiAwlRfCAhig8kRPGBhCg+kBDF\nBxKi+EBCFB9IiOIDCbVZQush2xO299YYCEB5bbb4myWtLDwHgIqmLH5EvCTp0wqzAKiEY3wgIdbO\nAxKaseKzdh7QO9jVBxJq83LeVkl/l7TY9iHbvyg/FoCS2iyaubbGIADqYVcfSIjiAwlRfCAhig8k\nRPGBhCg+kBDFBxKi+EBCrJ13BoaGhqrm1V5brraxsbHZHiEdtvhAQhQfSIjiAwlRfCAhig8kRPGB\nhCg+kBDFBxKi+EBCFB9IqM2HbV5qe6ftfbbftH1njcEAlNPmXP2vJP0uIvbYXihpt+0dEbGv8GwA\nCmmzdt4HEbGnuf65pHFJl5QeDEA50zrGt71I0rCkV0oMA6CO1m/LtX2epKckrY+IY6f5OWvnAT2i\nVfFtz1en9Fsi4unT3Ya184De0eZZfUt6UNJ4RNxXfiQApbU5xr9W0m2Sltkeay4/LTwXgILarJ33\nsiRXmAVAJZy5ByRE8YGEKD6QEMUHEqL4QEIUH0iI4gMJUXwgoTmxdt769eur5m3YsKFqXn9/f9W8\n2kZHR2d7hHTY4gMJUXwgIYoPJETxgYQoPpAQxQcSovhAQhQfSIjiAwlRfCChNp+ye7btV22/3qyd\nd2+NwQCU0+Zc/eOSlkXEF83n679s+68R8Y/CswEopM2n7IakL5ov5zcXFswAelirY3zbfbbHJE1I\n2hERrJ0H9LBWxY+IryNiSNKgpKW2rzr1NrbX2d5le9dMDwlgZk3rWf2IOCppp6SVp/nZxoi4OiKu\nnqnhAJTR5ln9C20PNNfPkbRC0v7SgwEop82z+hdLesR2nzoPFE9ExHNlxwJQUptn9f8labjCLAAq\n4cw9ICGKDyRE8YGEKD6QEMUHEqL4QEIUH0iI4gMJufOu2xm+U3tOv213YGCgat6RI0eq5tU2PFz3\n/LCxsbGqebVFhKe6DVt8ICGKDyRE8YGEKD6QEMUHEqL4QEIUH0iI4gMJUXwgIYoPJNS6+M2iGq/Z\n5oM2gR43nS3+nZLGSw0CoJ62S2gNSrpZ0qay4wCooe0W/35Jd0n6puAsACpps5LOLZImImL3FLdj\n7TygR7TZ4l8raZXtg5Iel7TM9qOn3oi184DeMWXxI+KeiBiMiEWS1kh6MSJuLT4ZgGJ4HR9IqM2i\nmd+KiFFJo0UmAVANW3wgIYoPJETxgYQoPpAQxQcSovhAQhQfSIjiAwlN6wQeoIShoaGqeXN97bw2\n2OIDCVF8ICGKDyRE8YGEKD6QEMUHEqL4QEIUH0iI4gMJUXwgoVan7DYfrf25pK8lfcVHaAO9bTrn\n6v8kIj4pNgmAatjVBxJqW/yQ9ILt3bbXlRwIQHltd/Wvi4jDtr8vaYft/RHx0uQbNA8IPCgAPaDV\nFj8iDjd/TkjaLmnpaW7D2nlAj2izWu65theevC7pRkl7Sw8GoJw2u/oXSdpu++TtH4uI54tOBaCo\nKYsfEQck/ajCLAAq4eU8ICGKDyRE8YGEKD6QEMUHEqL4QEIUH0iI4gMJUXwgIYoPJETxgYQoPpAQ\nxQcSovhAQhQfSIjiAwlRfCAhig8kRPGBhFoV3/aA7W2299set31N6cEAlNN2QY0/Sno+In5me4Gk\n7xacCUBhUxbfdr+k6yX9XJIi4oSkE2XHAlBSm139yyV9LOlh26/Z3tQsrPFfbK+zvcv2rhmfEsCM\nalP8eZKWSHogIoYlfSnp7lNvxBJaQO9oU/xDkg5FxCvN19vUeSAA0KOmLH5EfCjpPduLm28tl7Sv\n6FQAimr7rP4dkrY0z+gfkHR7uZEAlNaq+BExJoljd2CO4Mw9ICGKDyRE8YGEKD6QEMUHEqL4QEIU\nH0iI4gMJtT1zD5McPXq0at6zzz5bNW/16tVV80ZGRqrmbd68uWpeN2KLDyRE8YGEKD6QEMUHEqL4\nQEIUH0iI4gMJUXwgIYoPJDRl8W0vtj026XLM9voawwEoY8pTdiPiLUlDkmS7T9JhSdsLzwWgoOnu\n6i+X9E5EvFtiGAB1TLf4ayRtLTEIgHpaF7/5TP1Vkp78Hz9n7TygR0znbbk3SdoTER+d7ocRsVHS\nRkmyHTMwG4BCprOrv1bs5gNzQqviN8tir5D0dNlxANTQdgmtLyV9r/AsACrhzD0gIYoPJETxgYQo\nPpAQxQcSovhAQhQfSIjiAwlRfCAhR8z8+2lsfyzpTN6zf4GkT2Z4nG7IIo+8WnmXRcSFU92oSPHP\nlO1dEXH1XMsij7xuy2NXH0iI4gMJdVvxN87RLPLI66q8rjrGB1BHt23xAVRA8YGEKD6QEMUHEqL4\nQEL/AT9fgNySet2rAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x112f2ad90>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Targets:\n",
+      "[0 1 2 3 4 5 6 7 8 9]\n",
+      "[0 1 2 ..., 8 9 8]\n",
+      "(1797,)\n"
+     ]
+    }
+   ],
    "source": [
-    "digits = datasets.load_digits()"
+    "# load data and visualize images\n",
+    "digits = datasets.load_digits()\n",
+    "print('Data:')\n",
+    "print(digits.data.shape)\n",
+    "print(digits.data)\n",
+    "print('///////////////')\n",
+    "print('Images:')\n",
+    "print(digits.images.shape)\n",
+    "print(digits.images)\n",
+    "plt.gray()\n",
+    "plt.matshow(digits.images[1])\n",
+    "plt.show()\n",
+    "print('Targets:')\n",
+    "print(digits.target_names)\n",
+    "print(digits.target)\n",
+    "print(digits.target.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SVC(C=100, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "  decision_function_shape=None, degree=3, gamma=0.001, kernel='rbf',\n",
+       "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
+       "  tol=0.001, verbose=False)"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf = svm.SVC()\n",
+    "clf = svm.SVC(gamma=0.001, C = 100)\n",
+    "X,y = digits.data[:-10],digits.target[:-10]\n",
+    "clf.fit(X,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -35,31 +185,84 @@
       " [  0.   0.   0. ...,  10.   0.   0.]\n",
       " [  0.   0.   0. ...,  16.   9.   0.]\n",
       " ..., \n",
-      " [  0.   0.   1. ...,   6.   0.   0.]\n",
-      " [  0.   0.   2. ...,  12.   0.   0.]\n",
-      " [  0.   0.  10. ...,  12.   1.   0.]]\n"
+      " [  0.   0.   1. ...,   4.   0.   0.]\n",
+      " [  0.   1.  10. ...,   0.   0.   0.]\n",
+      " [  0.   0.   4. ...,   9.   0.   0.]]\n",
+      "(1787, 64)\n"
      ]
     }
    ],
    "source": [
-    "print(digits.data)"
+    "print(X)\n",
+    "print(X.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 1 2 ..., 8 9 8]\n"
+      "('Prediction:', array([8]))\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/JI/miniconda2/lib/python2.7/site-packages/sklearn/utils/validation.py:395: DeprecationWarning: Passing 1d arrays as data is deprecated in 0.17 and will raise ValueError in 0.19. Reshape your data either using X.reshape(-1, 1) if your data has a single feature or X.reshape(1, -1) if it contains a single sample.\n",
+      "  DeprecationWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAPgAAAD8CAYAAABaQGkdAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAACrlJREFUeJzt3d2LXeUZhvH77mhprXYCSRokEzM5kIAUamQISIqSiCVW\n0Qo9SEBxpJAjxaEF0Z75D0h6UASJZgKmShsVRKxW0NEKrXUS09ZkYknDLpmgzYQSjB40RJ8ezApE\nSdlrstfXfrx+MDgfm3mfbbxca/asrNcRIQA5faPtAQDUh8CBxAgcSIzAgcQIHEiMwIHECBxIjMCB\nxAgcSOyyOr7pihUrYnx8vI5v3aper9foemfOnGlsreXLlze21qpVqxpba2RkpLG1mtTr9XTq1Cn3\ne1wtgY+Pj2t2draOb92qycnJRtebmZlpbK0mn9vU1FRjay1btqyxtZo0MTFR6nGcogOJETiQGIED\niRE4kBiBA4kROJAYgQOJETiQWKnAbW+1/aHto7YfqXsoANXoG7jtEUm/lnSbpOskbbd9Xd2DARhc\nmSP4RklHI+JYRJyV9Jyku+odC0AVygS+WtLxCz6eLz4HoOMqe5HN9g7bs7ZnFxYWqvq2AAZQJvAT\nktZc8PFY8bkviYgnI2IiIiZWrlxZ1XwABlAm8PckXWt7ne1vStom6aV6xwJQhb5/Hzwiztl+QNJr\nkkYkPR0Rh2qfDMDASt3wISJekfRKzbMAqBhXsgGJETiQGIEDiRE4kBiBA4kROJAYgQOJETiQWC07\nmzSpye2E9uzZ09hakrR27drG1sq41RQ4ggOpETiQGIEDiRE4kBiBA4kROJAYgQOJETiQGIEDiZXZ\n2eRp2ydtf9DEQACqU+YIPi1pa81zAKhB38Aj4m1J/2lgFgAV42dwIDG2LgISqyxwti4CuodTdCCx\nMr8me1bSnySttz1v+2f1jwWgCmX2JtvexCAAqscpOpAYgQOJETiQGIEDiRE4kBiBA4kROJAYgQOJ\nDf3WRU1uuTM6OtrYWpJ0+vTpxtZqcguoJv/Mmvx32EUcwYHECBxIjMCBxAgcSIzAgcQIHEiMwIHE\nCBxIjMCBxAgcSKzMTRfX2H7T9mHbh2w/1MRgAAZX5lr0c5J+EREHbF8lab/t1yPicM2zARhQmb3J\nPoqIA8X7ZyTNSVpd92AABrekn8Ftj0vaIOndi3yNrYuAjikduO0rJT0vaSoiPvnq19m6COieUoHb\nvlyLce+NiBfqHQlAVcq8im5JT0mai4jH6x8JQFXKHME3SbpX0hbbB4u3H9c8F4AKlNmb7B1JbmAW\nABXjSjYgMQIHEiNwIDECBxIjcCAxAgcSI3AgMQIHEhv6vcmaND093eh6d999d2NrPfbYY42tdd99\n9zW21tcdR3AgMQIHEiNwIDECBxIjcCAxAgcSI3AgMQIHEiNwILEyN138lu2/2P5rsXVRc5c8ARhI\nmUtV/ytpS0R8Wtw++R3bv4+IP9c8G4ABlbnpYkj6tPjw8uIt6hwKQDXKbnwwYvugpJOSXo8Iti4C\nhkCpwCPi84i4XtKYpI22v3+Rx7B1EdAxS3oVPSJOS3pT0tZ6xgFQpTKvoq+0vax4/9uSbpV0pO7B\nAAyuzKvoV0vaY3tEi/9D+G1EvFzvWACqUOZV9L9pcU9wAEOGK9mAxAgcSIzAgcQIHEiMwIHECBxI\njMCBxAgcSIyti5Zg586dja43Ojra6HpN6fV6bY/wtcERHEiMwIHECBxIjMCBxAgcSIzAgcQIHEiM\nwIHECBxIrHTgxb3R37fN/diAIbGUI/hDkubqGgRA9crubDIm6XZJu+odB0CVyh7Bd0p6WNIXNc4C\noGJlNj64Q9LJiNjf53HsTQZ0TJkj+CZJd9ruSXpO0hbbz3z1QexNBnRP38Aj4tGIGIuIcUnbJL0R\nEffUPhmAgfF7cCCxJd3RJSJmJM3UMgmAynEEBxIjcCAxAgcSI3AgMQIHEiNwIDECBxIjcCCxod+6\naGZmprG13nrrrcbWkqTdu3c3ttb4+Hhja23evLmxtaanpxtbS5ImJycbXa8fjuBAYgQOJEbgQGIE\nDiRG4EBiBA4kRuBAYgQOJEbgQGKlrmQr7qh6RtLnks5FxESdQwGoxlIuVd0cEadqmwRA5ThFBxIr\nG3hI+oPt/bZ31DkQgOqUPUX/YUScsP09Sa/bPhIRb1/4gCL8HZJ0zTXXVDwmgEtR6ggeESeKf56U\n9KKkjRd5DFsXAR1TZvPB79i+6vz7kn4k6YO6BwMwuDKn6KskvWj7/ON/ExGv1joVgEr0DTwijkn6\nQQOzAKgYvyYDEiNwIDECBxIjcCAxAgcSI3AgMQIHEiNwIDG2LuqwJp9bk1sXNanX67U9Qqs4ggOJ\nETiQGIEDiRE4kBiBA4kROJAYgQOJETiQGIEDiZUK3PYy2/tsH7E9Z/vGugcDMLiyl6r+StKrEfFT\n29+UdEWNMwGoSN/AbY9KuknSpCRFxFlJZ+sdC0AVypyir5O0IGm37fdt7yrujw6g48oEfpmkGyQ9\nEREbJH0m6ZGvPsj2DtuztmcXFhYqHhPApSgT+Lyk+Yh4t/h4nxaD/xK2LgK6p2/gEfGxpOO21xef\nukXS4VqnAlCJsq+iPyhpb/EK+jFJ99c3EoCqlAo8Ig5Kmqh5FgAV40o2IDECBxIjcCAxAgcSI3Ag\nMQIHEiNwIDECBxIjcCCxod+bbGpqqu0RatPk3mRNrnXzzTc3tlbm/z7K4AgOJEbgQGIEDiRG4EBi\nBA4kRuBAYgQOJEbgQGIEDiTWN3Db620fvODtE9tf78uDgCHR91LViPhQ0vWSZHtE0glJL9Y8F4AK\nLPUU/RZJ/4yIf9UxDIBqLTXwbZKevdgX2LoI6J7SgRebHtwp6XcX+zpbFwHds5Qj+G2SDkTEv+sa\nBkC1lhL4dv2f03MA3VQq8GI/8FslvVDvOACqVHZvss8kLa95FgAV40o2IDECBxIjcCAxAgcSI3Ag\nMQIHEiNwIDECBxJzRFT/Te0FSUv9K6UrJJ2qfJhuyPrceF7tWRsRff9WVy2BXwrbsxEx0fYcdcj6\n3Hhe3ccpOpAYgQOJdSnwJ9seoEZZnxvPq+M68zM4gOp16QgOoGKdCNz2Vtsf2j5q+5G256mC7TW2\n37R92PYh2w+1PVOVbI/Yft/2y23PUiXby2zvs33E9pztG9ueaRCtn6IX91r/hxbvGDMv6T1J2yPi\ncKuDDcj21ZKujogDtq+StF/ST4b9eZ1n++eSJiR9NyLuaHueqtjeI+mPEbGruNHoFRFxuu25LlUX\njuAbJR2NiGMRcVbSc5LuanmmgUXERxFxoHj/jKQ5Savbnaoatsck3S5pV9uzVMn2qKSbJD0lSRFx\ndpjjlroR+GpJxy/4eF5JQjjP9rikDZLebXeSyuyU9LCkL9oepGLrJC1I2l38+LGruB/h0OpC4KnZ\nvlLS85KmIuKTtucZlO07JJ2MiP1tz1KDyyTdIOmJiNgg6TNJQ/2aUBcCPyFpzQUfjxWfG3q2L9di\n3HsjIssdaTdJutN2T4s/Tm2x/Uy7I1VmXtJ8RJw/09qnxeCHVhcCf0/StbbXFS9qbJP0UsszDcy2\ntfiz3FxEPN72PFWJiEcjYiwixrX4Z/VGRNzT8liViIiPJR23vb741C2ShvpF0VK3Ta5TRJyz/YCk\n1ySNSHo6Ig61PFYVNkm6V9LfbR8sPvfLiHilxZnQ34OS9hYHm2OS7m95noG0/msyAPXpwik6gJoQ\nOJAYgQOJETiQGIEDiRE4kBiBA4kROJDY/wDVKqsMFFE3vQAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x112f2add0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "print('Prediction:', clf.predict(digits.data[-1]))\n",
+    "plt.imshow(digits.images[-1], cmap=plt.cm.gray_r, interpolation='nearest')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "list indices must be integers, not tuple",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-108-0c3d41545e31>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m//\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m//\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m//\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers, not tuple"
      ]
     }
    ],
    "source": [
-    "print(digits.target)\n"
+    "df = [1,2,3,4,5]\n",
+    "print(len(df)//2)\n",
+    "print(df[len(df)//2:])\n",
+    "print(df[:len(df)//2])"
    ]
   },
   {
