--- a/tutorials/SVM character recognition.ipynb
+++ b/tutorials/SVM character recognition.ipynb
@@ -236,25 +236,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers, not tuple",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-108-0c3d41545e31>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m//\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m//\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m//\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers, not tuple"
+      "2\n",
+      "[3, 4, 5]\n",
+      "[1, 2]\n"
      ]
     }
    ],
@@ -263,6 +254,68 @@
     "print(len(df)//2)\n",
     "print(df[len(df)//2:])\n",
     "print(df[:len(df)//2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optical Recognition of Handwritten Digits Data Set\n",
+      "===================================================\n",
+      "\n",
+      "Notes\n",
+      "-----\n",
+      "Data Set Characteristics:\n",
+      "    :Number of Instances: 5620\n",
+      "    :Number of Attributes: 64\n",
+      "    :Attribute Information: 8x8 image of integer pixels in the range 0..16.\n",
+      "    :Missing Attribute Values: None\n",
+      "    :Creator: E. Alpaydin (alpaydin '@' boun.edu.tr)\n",
+      "    :Date: July; 1998\n",
+      "\n",
+      "This is a copy of the test set of the UCI ML hand-written digits datasets\n",
+      "http://archive.ics.uci.edu/ml/datasets/Optical+Recognition+of+Handwritten+Digits\n",
+      "\n",
+      "The data set contains images of hand-written digits: 10 classes where\n",
+      "each class refers to a digit.\n",
+      "\n",
+      "Preprocessing programs made available by NIST were used to extract\n",
+      "normalized bitmaps of handwritten digits from a preprinted form. From a\n",
+      "total of 43 people, 30 contributed to the training set and different 13\n",
+      "to the test set. 32x32 bitmaps are divided into nonoverlapping blocks of\n",
+      "4x4 and the number of on pixels are counted in each block. This generates\n",
+      "an input matrix of 8x8 where each element is an integer in the range\n",
+      "0..16. This reduces dimensionality and gives invariance to small\n",
+      "distortions.\n",
+      "\n",
+      "For info on NIST preprocessing routines, see M. D. Garris, J. L. Blue, G.\n",
+      "T. Candela, D. L. Dimmick, J. Geist, P. J. Grother, S. A. Janet, and C.\n",
+      "L. Wilson, NIST Form-Based Handprint Recognition System, NISTIR 5469,\n",
+      "1994.\n",
+      "\n",
+      "References\n",
+      "----------\n",
+      "  - C. Kaynak (1995) Methods of Combining Multiple Classifiers and Their\n",
+      "    Applications to Handwritten Digit Recognition, MSc Thesis, Institute of\n",
+      "    Graduate Studies in Science and Engineering, Bogazici University.\n",
+      "  - E. Alpaydin, C. Kaynak (1998) Cascading Classifiers, Kybernetika.\n",
+      "  - Ken Tang and Ponnuthurai N. Suganthan and Xi Yao and A. Kai Qin.\n",
+      "    Linear dimensionalityreduction using relevance weighted LDA. School of\n",
+      "    Electrical and Electronic Engineering Nanyang Technological University.\n",
+      "    2005.\n",
+      "  - Claudio Gentile. A New Approximate Maximal Margin Classification\n",
+      "    Algorithm. NIPS. 2000.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print digits.DESCR"
    ]
   },
   {
